--- a/src/app/customers/customers-list/customers-list.component.html
+++ b/src/app/customers/customers-list/customers-list.component.html
@@ -12,7 +12,7 @@
     <tr *ngFor="let cust of filteredCustomers">
         <td>
             <a>
-                {{ cust.name }}
+                {{ cust.name | capitalize }} <!-- Custom Pipe -->
             </a>
         </td>
         <td> {{ cust.city }} </td>
